# xbible_engine

./: .gitignore  Cargo.toml  build.rs  build.sh  cpp-bindings.toml  setup.sh
XbibleEngine/: Package.swift
XbibleEngine/Sources/XbibleEngine/: XbibleEngine.swift  xbible_engine.swift
XbibleEngine/Tests/XbibleEngineTests/: XbibleEngineTests.swift
XbibleEngine/xbible_engine.xcframework/macos-arm64/Headers/: xbible_engine.swift  xbible_engineFFI.h
examples/: engine.rs
ios/xbible_engine.xcframework/macos-arm64/Headers/: module.modulemap  xbible_engineFFI.h
macos/xbible_engine.xcframework/: Info.plist
macos/xbible_engine.xcframework/macos-arm64/Headers/: xbible_engine.swift
src/: bible_api.rs  lib.rs
src/sword_engine/: engine.rs  mod.rs  module.rs  tests.rs
src/sword_engine/module_engine/: mod.rs  sword_engine.rs  sword_engine_books_and_chapter_ext.rs  sword_engine_dictionary_ext.rs  sword_engine_language_ext.rs  sword_engine_module_content_ext.rs  sword_engine_util_ext.rs  sword_module.rs
src/sword_engine/osis_translation_engine/: engine.rs
